# linux-autoscroll

./: .gitignore  README.rst  pyproject.toml
src/xautoscroll/: __init__.py  __main__.py
